# exoIUT

./: Dockerfile  docker-compose.yaml
project/: lib.py  main.py  pyproject.toml
